--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
   "dependencies": {
     "@langchain/core": "^0.3.36",
     "@langchain/google-genai": "^0.1.6",
+    "dotenv": "^16.4.7",
     "langchain": "^0.3.13"
   },
   "overrides": {
