--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@langchain/core": "^0.3.36",
     "@langchain/google-genai": "^0.1.6",
+    "@langchain/groq": "^0.1.3",
     "dotenv": "^16.4.7",
     "langchain": "^0.3.13"
   },
