--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/core": "^0.3.36",
     "@langchain/google-genai": "^0.1.6",
     "@langchain/groq": "^0.1.3",
+    "@langchain/ollama": "^0.1.5",
     "dotenv": "^16.4.7",
     "langchain": "^0.3.13"
   },
