--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^0.3.30",
     "@langchain/core": "^0.3.36",
     "@langchain/google-genai": "^0.1.6",
     "@langchain/groq": "^0.1.3",
     "@langchain/ollama": "^0.1.5",
+    "chromadb": "^1.10.4",
     "dotenv": "^16.4.7",
-    "langchain": "^0.3.13"
+    "langchain": "^0.3.13",
+    "pdf-parse": "^1.1.1"
   },
   "overrides": {
     "@langchain/core": "^0.3.36"
